# absolute-self-governance

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELATED_PROJECTS.md  TELEMETRY_LOG.md  alembic.ini  benchmark_results.md  config.yaml  gcp_cleanup.sh  install.sh  k8s-webhook.yaml  paper_parity_analysis.md  pyproject.toml
.agents/: AGENTS.md
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: d6c85050648f_initial_schema.py
docs/: BENCHMARKING.md  EVAL_LEAKAGE_TAXONOMY.md  RUNBOOK.md  architecture_graph.md  ruflo_integration_proposal.md
docs/superpowers/specs/: 2026-07-10-commercial-readiness-design.md  2026-07-12-asg-repair-loop-design.md  2026-07-15-post-validation-improvement-plan.md  2026-07-16-agentic-ai-book-refactor.md  2026-07-17-automaton-inspired-hardening-plan.md
src/self_governance/: __init__.py  ability_loader.py  agency_agents_adapter.py  alerts.py  anti_drift.py  auth.py  base_adapter.py  benchmark.py  benchmark_tasks.json  benchmark_tasks_heldout.json  billing.py  cli.py  complexity.py  config.py  consensus.py  dashboard.py  db.py  demo.py  devserver.py  dimensioning.py  economics.py  execution.py  fact_extraction.py  gemini_adapter.py  github_app.py  graph_memory.py  injection_defense.py  learning.py  load_tester.py  mcp.py  mcp_server.py  memory.py  metrics.py  models.py  nudger.py  onboarding.py  p2p.py  policy.py  providers.py  security.py  (+4 more)
src/self_governance/abilities/: sqlite_concurrency.json
src/self_governance/assets/: agents.json
src/self_governance/policy_rules/: __init__.py  authority.py  blast_radius.py  budget.py  command_safety.py  import_boundary.py  path_protection.py  rate_limits.py  sandbox_routing.py
src/self_governance/templates/: dashboard.html  grafana_dashboard.json
telemetry/: analyze_sweep.py  check_regression.py  eval_memory_recall.py  phase_a_harness.py  phase_a_results.json  phase_b_benchmark_results.json  phase_b_consensus.py  phase_b_consensus_results.json  phase_b_e2e_results.json  phase_c_benchmark_scaled.py  phase_c_benchmark_scaled_aggregate.json  phase_c_benchmark_scaled_results.json  phase_d_swe_bench.py  phase_e_nemotron_30rep_prechange.jsonl  phase_f_nemotron_30rep_v2_rotating.jsonl  phase_g_lru_retry_threadsafe_100rep.jsonl  phase_heldout_4task_30rep.jsonl
telemetry/golden/: phase_g_baseline.json
tests/: conftest.py  test_adapters.py  test_agency_agents_integration.py  test_alerts.py  test_arxiv_batch_findings.py  test_asg_enhancements.py  test_auth_pbkdf2.py  test_benchmark.py  test_cli.py  test_config.py  test_consensus.py  test_consensus_adversarial.py  test_coverage_boost.py  test_coverage_boost_extra.py  test_dashboard_challenger.py  test_dashboard_e2e.py  test_demo.py  test_devserver.py  test_dimensioning.py  test_e2e.py  test_eval_memory_recall.py  test_execution.py  test_fact_extraction.py  test_github_app.py  test_graph_memory.py  test_hardening.py  test_hitl_and_json.py  test_hooks_and_routing.py  test_injection_defense.py  test_learning.py  test_learning_distillation.py  test_m2_challenger.py  test_m2_fixes.py  test_m2_stress.py  test_m3_challenger.py  test_m3_stress_challenger.py  test_m4_challenger.py  test_m4_stress_adversarial.py  test_mcp_server.py  test_multitenancy.py  (+25 more)
