[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self_governance"
version = "0.1.0"
description = "A Python implementation of the Absolute Self-Governance (ASG) architecture for multi-agent software engineering swarms, featuring TETD consensus and memory-efficient dynamic scaling."
authors = [
    { name = "Gautam Parab", email = "gautamparab@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "pyyaml",
    "watchdog",
    "fastapi",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
self-governance = "self_governance.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff",
    "bandit",
    "pip-audit",
    "mypy",
]



