[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "absolute-self-governance"
version = "0.1.2"
description = "A Python implementation of the Absolute Self-Governance (ASG) architecture for multi-agent software engineering swarms, featuring TETD consensus and memory-efficient dynamic scaling."
authors = [
    { name = "Gautam Parab", email = "gautamparab@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "watchdog",
    "fastapi",
    "uvicorn",
    "prometheus-client",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
self-governance = "self_governance.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff",
    "bandit",
    "pip-audit",
    "mypy",
]

[tool.mypy]
ignore_missing_imports = true

# Gradual typing: these modules predate type checking and are suppressed
# individually. Fix a module, delete it from this list — never re-widen.
[[tool.mypy.overrides]]
module = [
    "self_governance.benchmark",
    "self_governance.db",
    "self_governance.gemini_adapter",
    "self_governance.github_app",
    "self_governance.models",
]
ignore_errors = true

[tool.coverage.run]
omit = [
    "src/self_governance/load_tester.py",
]



