[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "absolute-self-governance"
version = "0.1.7"
description = "A Python implementation of the Absolute Self-Governance (ASG) architecture for multi-agent software engineering swarms, featuring TETD consensus and memory-efficient dynamic scaling."
authors = [
    { name = "Gautam Parab", email = "gautamparab@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.0,<7.0.0",
    "watchdog>=3.0.0,<7.0.0",
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn>=0.20.0,<1.0.0",
    "prometheus-client>=0.15.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.9.0,<2.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "opentelemetry-api>=1.15.0,<2.0.0",
    "opentelemetry-sdk>=1.15.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.15.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "cryptography>=49.0.0",
    "networkx>=3.6.1",
    "mcp>=1.28.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
self-governance = "self_governance.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff",
    "bandit",
    "pip-audit",
    "mypy",
]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "src/self_governance/load_tester.py",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "e2e: End-to-end browser and server integration tests"
]



